# sms-spam-classifier

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: sms_spam_semantic_embedding_clustering.ipynb  sms_spam_supervised_model_selection.ipynb
src/: modeling.py  training_utils.py  utils.py
tests/: conftest.py  test_modeling.py  test_training_utils.py  test_utils.py
