[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sms-spam-analysis"
version = "0.1.0"
description = "Utilities and notebooks for SMS spam analysis."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy==2.4.4",
    "pandas==3.0.2",
    "scikit-learn==1.8.0",
    "matplotlib==3.10.8",
    "optuna==4.8.0",
    "ipywidgets==8.1.8",
    "sentence-transformers==3.2.1",
]

[tool.setuptools]
packages = ["src"]
